[package]
name = "musical-doodle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
average = "0.14.1"
color-eyre = "0.6.2"
ctrlc = "3.4.0"
git-version = "0.3.5"
hostname = "0.3.1"
itertools = "0.11.0"
log = "0.4.20"
pretty_assertions = "1.4.0"
rand = "0.8.5"
rand_hc = "0.3.2"
rodio = "0.17.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.105"
simplelog = "0.12.1"
structopt = "0.3.26"
sys-info = "0.9.1"
time = { version = "0.3.29", features = ["formatting", "macros"] }
unicase = "2.7.0"
url = "2.4.1"
ws = "0.9.2"

[features]
# Activate old sample main
play-single-file = []  # TODO: delete
